fix: hamburger menu on mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar {
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: black;
     padding: 20px;
     align-items: center;
@@ -214,7 +214,6 @@ body::-webkit-scrollbar {
     position: fixed;
     bottom: 0;
     right: 0;
-    z-index: 100;
     opacity: 1;
     transform: translateY(100px);
     transition: all .5s ease;
@@ -233,33 +232,54 @@ body::-webkit-scrollbar {
         display: none;
     }
 
+    .navbar {
+        justify-content: space-between;
+        z-index: 99;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        right: 0;
+    }
+
+    .navbar__logo a {
+        padding-left: 50px;
+    }
+
+
     .navbar__about {
         position: fixed;
         left: -100%;
-        top: 5rem;
+        top: 0;
+        z-index: -1;
         flex-direction: column;
         background-color: black;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         text-align: center;
         transition: 0.3s;
         box-shadow:
             0 10px 27px rgba(0, 0, 0, 0.05);
+        
     }
 
     .navbar__about.active {
         left: 0;
+        
     }
 
     .navbar__item {
-        margin: 2.5rem 0;
+        margin-top: 120px;
+        
     }
 
     
     .hamburger {
         display: flex;
+        justify-content: flex-end;
         flex-direction: column;
         cursor: pointer;
+        z-index: 99;
+
     }
 
     .hamburger.active .bar:nth-child(2) {
